applications/nginx-0582731/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nginx-0582731
  namespace: testing

spec:
  selector:
    app: nginx-0582731

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
