applications/nginx-0582731/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-0582731
  namespace: testing

spec:
  ingressClassName: traefik

  rules:
  - host: nginx-0582731.lab.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: nginx-0582731

            port:
              number: 80
